[gd_scene load_steps=6 format=2]

[ext_resource path="res://microgames/Rhythm_game/src/Rhythm_game.gd" type="Script" id=1]
[ext_resource path="res://core/intermission/icon.png" type="Texture" id=2]
[ext_resource path="res://microgames/Rhythm_game/src/Beater.gd" type="Script" id=3]
[ext_resource path="res://microgames/Rhythm_game/src/StateMachine.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Rhythm_game" type="Node2D"]
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Target" type="Node2D" parent="StateMachine"]
position = Vector2( 501, 300 )
scale = Vector2( 1.5, 1.5 )
z_index = -1

[node name="Sprite" type="Sprite" parent="StateMachine/Target"]
modulate = Color( 0.164706, 0.537255, 0.266667, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="StateMachine/Target"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StateMachine/Target/Area2D"]
polygon = PoolVector2Array( -32, 32, 32, 32, 32, -32, -32, -32.6667, -32, 28, -27.3333, 28, -26.6667, -29.3333, 27.3333, -28.6667, 27.3333, 28, -32, 28 )

[node name="Target2" type="Node2D" parent="StateMachine"]
position = Vector2( 500, 300 )
scale = Vector2( 5, 5 )
z_index = -1

[node name="Sprite" type="Sprite" parent="StateMachine/Target2"]
modulate = Color( 0.831373, 0.215686, 0.74902, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="StateMachine/Target2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StateMachine/Target2/Area2D"]
polygon = PoolVector2Array( -32, 32, 32, 32, 32, -32, -32, -32.6667, -32, 28, -27.3333, 28, -26.6667, -29.3333, 27.3333, -28.6667, 27.3333, 28, -32, 28 )

[node name="Target3" type="Node2D" parent="StateMachine"]
position = Vector2( 500, 300 )
scale = Vector2( 7, 7 )
z_index = -1

[node name="Sprite" type="Sprite" parent="StateMachine/Target3"]
modulate = Color( 0.164706, 0.537255, 0.266667, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="StateMachine/Target3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StateMachine/Target3/Area2D"]
polygon = PoolVector2Array( -32, 32, 32, 32, 32, -32, -32, -32.6667, -32, 28, -27.3333, 28, -26.6667, -29.3333, 27.3333, -28.6667, 27.3333, 28, -32, 28 )

[node name="Beater" type="Node2D" parent="."]
position = Vector2( 500, 300 )
script = ExtResource( 3 )
node_path = NodePath(".")

[node name="Sprite" type="Sprite" parent="Beater"]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Beater"]

[node name="Area2D" type="Area2D" parent="Beater"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beater/Area2D"]
shape = SubResource( 1 )

[connection signal="area_entered" from="StateMachine/Target/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="StateMachine/Target/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="StateMachine/Target2/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="StateMachine/Target2/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="StateMachine/Target3/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="StateMachine/Target3/Area2D" to="." method="_on_Area2D_area_exited"]
